k8s/Service.redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: url-shortner-ns
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
