k8s/Service.rediss.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: url-shortner-ns
  name: rediss
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
