k8s/Service.url.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: url-shortner-ns
  name: url-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: url-shortner
